--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div id="things" class="work">
-          DODAJ DO BAGAŻU
+          DODAJ DO BAGAŻU 2
         </div>
 
         <div id="luggage" class="work hidden">
